private-dormitory/force-app/main/default/objects/Guest_Pass__c/Guest_Pass__c.object-meta.xml
<CustomObject>
    <label>Guest Pass</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Guest Pass Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Passes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>