private-dormitory/force-app/main/default/objects/Guest_Pass__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <description>The name of the Guest</description>
    <label>Guest Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>