private-dormitory/force-app/main/default/objects/Guest_Pass__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The resident who hosts the guest.</description>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>