private-dormitory/force-app/main/default/objects/Guest_Pass__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The room of the host.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Guest Passes</relationshipLabel>
    <relationshipName>Guest_Passes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>