private-dormitory/force-app/main/default/objects/Guest_Pass__c/fields/Visit_type__c.field-meta.xml
<CustomField>
    <fullName>Visit_type__c</fullName>
    <label>Visit type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>