private-dormitory/force-app/main/default/objects/Guest_Pass__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name__c</columns>
    <columns>Host__c</columns>
    <columns>Room__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Guest Passes</label>
</ListView>